kubernetes/apps/downloads/qbittorrent/app/network-policy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: downloads-qbittorrent-vpn
  namespace: downloads
  labels:
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/name: qbittorrent
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: qbittorrent
      toPorts:
        - ports:
            - port: "51820"
              protocol: UDP
            - port: "1194"
              protocol: UDP
    - fromCIDRSet:
        - cidr: 192.168.0.0/16
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEntities:
        - cluster
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "51820"
              protocol: UDP
            - port: "1194"
              protocol: UDP
    - toCIDRSet:
        - cidr: 192.168.0.0/16
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEntities:
        - cluster
